# twitterclone

./: pyproject.toml
authentication/: forms.py  views.py
notification/: admin.py  models.py  views.py
notification/migrations/: 0001_initial.py
templates/: base.html  index.html  login.html  notification.html  post.html  profile.html  tweet_detail.html
tweet/: forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20210913_0208.py  0003_auto_20210913_1718.py
