[tool.poetry]
name = "twitterclone-dawitt"
version = "0.1.0"
description = ""
authors = ["dawitt <delfan2003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
